Add unnamed variable example update compiler to 22